Updated Stats.js implementation.

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                 }
 
                 // Append stats.
-                stats.getDomElement().className = 'stats';
-                document.body.appendChild(stats.getDomElement());
+                stats.domElement.className = 'stats';
+                document.body.appendChild(stats.domElement);
 
                 // Set default demo and start updating.
                 setDemo('Attraction');
