--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
     <!-- Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="https://raw.github.com/mrdoob/stats.js/master/src/Stats.js"></script>
+    <script src="http://cdn.iamwebdeveloper.in/js/stats.js/r11/Stats.js"></script>
     <!-- Core -->
     <script src="compiled/base.js"></script>
     <script src="compiled/math/Random.js"></script>
