Added spatial quadtree to optimise collision calculations (thanks @kirbysayshi for the impetus)

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
     <script src="compiled/engine/integrator/ImprovedEuler.js"></script>
     <script src="compiled/engine/integrator/Verlet.js"></script>
     <!-- Engine -->
+    <script src="compiled/engine/Quadtree.js"></script>
     <script src="compiled/engine/Particle.js"></script>
     <script src="compiled/engine/Physics.js"></script>
     <script src="compiled/engine/Spring.js"></script>
